<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_marginEnd="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_4sdp"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:padding="@dimen/_8sdp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_toEndOf="@+id/iv_item_photo"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            tools:text="@string/text_heroes_name" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_button"
            android:layout_below="@id/tv_item_name"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_toEndOf="@id/iv_item_photo"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/text_heroes_detail" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_toEndOf="@+id/iv_item_photo"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_favourite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_favorite"
                android:textSize="@dimen/_8ssp" />

            <Button
                android:id="@+id/btn_set_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_share"
                android:textSize="@dimen/_8ssp" />

        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>